fix scrolling issue on mobile devices

--- a/src/components/styles/mobile-styles.scss
+++ b/src/components/styles/mobile-styles.scss
@@ -3,6 +3,10 @@
         visibility: hidden;
     }
 
+    body {
+        overflow: auto;
+    }
+
     h1 {
         font-size: 2.5rem;
         text-align: left;
